# TaskbarLyrics

./: .gitignore  AGENTS.md  CMakeLists.txt  CONTEXT.md  README.md
.github/workflows/: release.yml
docs/: design.md  requirements.md
docs/adr/: 0001-run-inside-host-client.md  0002-overlay-within-taskbar-bounds.md  0003-consume-host-playback-state.md  0004-load-through-msimg32-proxy.md  0005-reassert-overlay-z-order.md
scripts/: build.ps1  common.ps1  install.ps1  release.ps1  uninstall.ps1
src/bridge/: cef_abi.h  cef_probe.cpp  cef_probe.h  host_bridge.cpp  host_bridge.h
src/core/: bootstrap.cpp  bootstrap.h  config.cpp  config.h  logging.cpp  logging.h
src/proxy/: dllmain.cpp  msimg32.def
src/ui/: lyric_window.cpp  lyric_window.h  taskbar_layout.cpp  taskbar_layout.h
tests/: host_bridge_test.cpp  proxy_smoke_test.cpp  window_preview.cpp
